<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        tools:ignore="MissingConstraints" />

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="317dp"
                android:layout_marginBottom="9dp"
                android:text="@string/TV_IDENTIDAD_STRING"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edIdentidadCoordenada"
                android:layout_width="wrap_content"
                style="@style/inputs_dialog"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="166dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="303dp"
                android:layout_height="24dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="325dp"
                android:layout_marginBottom="6dp"
                android:text="@string/TV_NOMBRE_STRING"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edNombreCoordenada"
                android:layout_width="339dp"
                style="@style/inputs_dialog"
                android:layout_marginStart="35dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="166dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvX"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="251dp"
                android:layout_marginBottom="8dp"
                android:text="@string/TV_COORDENADA_x_STRING"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tvlatitud"
                android:layout_width="303dp"
                style="@style/inputs_dialog"
                android:layout_marginStart="35dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="73dp"
                android:layout_marginBottom="9dp"
                android:ems="10"
                android:enabled="false"
                android:hint="X"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvY"
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="4dp"
                android:text="@string/TV_COORDENADA_Y_STRING"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/tvlongitud"
                android:layout_width="296dp"
                style="@style/inputs_dialog"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:enabled="false"
                android:hint="Y"
                android:inputType="textPersonName" />


            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="121dp"
                android:layout_height="52dp"
                android:layout_marginStart="138dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="169dp"

                android:text="GUARDAR"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnLocal"
                style="@style/inputs_dialog"
                android:layout_width="155dp"
                android:layout_height="61dp"
                android:layout_marginStart="138dp"
                android:layout_marginEnd="169dp"
                android:text="@string/BTN_GUARDAR_LOCAL_STRING" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
